fix: footer contrast with background

--- a/src/overrides.css
+++ b/src/overrides.css
@@ -10,10 +10,7 @@ main > footer cn-avatar {
   text-shadow: none;
 }
 main > footer a {
-  color: light-dark(
-    var(--chroma-surface-90),
-    var(--chroma-surface-10)
-  );
+  color: light-dark(var(--chroma-surface-90), var(--chroma-surface-10));
 }
 main > footer h4 {
   margin-bottom: var(--cn-grid);
